cmake_minimum_required (VERSION 2.6)
project(message-forwarder)
set (message-forwarder_VERSION_MAJOR 1)
set (message-forwarder_VERSION_MINOR 0)
set(CURL_LIBRARY "-lcurl") 
find_package(CURL REQUIRED) 
add_executable (message-forwarder forwarder.c)
include_directories(${CURL_INCLUDE_DIR})
target_link_libraries(node-message-forwarder ${CURL_LIBRARIES})
